--- a/codecov.yml
+++ b/codecov.yml
@@ -21,6 +21,7 @@ ignore:
   # the conda environment and is not included
   # in the coverage report collected in the standard way
   - "primo/demo/tests/test_demo.py"
+  - "primo/opt_model/tests/test_model_options.py"
   # Ignore tests that rely on secrets which are 
   # not passed to incoming PRs to avoid false 
   # alarm on reduced coverage
