--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 testpaths = primo/
 markers =
-    demo: test that relies on running the demo notebook
+    scip: test that relies on having a scip installation available
     secrets: tests that rely on repository secrets which may not be accesible to PRs
     widgets: tests for widgets that rely on playwright and solara for execution
